[gd_scene load_steps=5 format=3 uid="uid://bc0jjce0w0gwc"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_abc123"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_def456"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1400, 100)

[node name="Main" type="Node2D"]
script = ExtResource("1_abc123")

[node name="World" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="World"]
position = Vector2(640, 650)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="World/Ground"]
offset_left = -700.0
offset_top = -50.0
offset_right = 700.0
offset_bottom = 100.0
color = Color(0.7, 0.9, 1, 1)

[node name="Player" type="CharacterBody2D" parent="World"]
position = Vector2(640, 500)
script = ExtResource("2_def456")

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Player"]

[node name="Sprite2D" type="Sprite2D" parent="World/Player"]

[node name="Camera2D" type="Camera2D" parent="World/Player"]
zoom = Vector2(1, 1)

[node name="Collectibles" type="Node2D" parent="World"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreDisplay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 200.0

[node name="ScoreLabel" type="Label" parent="UI/ScoreDisplay"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "分数: 0"

[node name="ComboLabel" type="Label" parent="UI/ScoreDisplay"]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 380.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 24
text = "连击: x1"

[node name="SpeedLabel" type="Label" parent="UI/ScoreDisplay"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 380.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 18
text = "速度: 0"

[node name="ActionLabel" type="Label" parent="UI/ScoreDisplay"]
layout_mode = 0
offset_left = 20.0
offset_top = 160.0
offset_right = 380.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 18
text = "动作: 无"

[node name="ParameterPanel" type="Panel" parent="UI"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 400.0
modulate = Color(1, 1, 1, 0.9)

[node name="Title" type="Label" parent="UI/ParameterPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "参数调整"
horizontal_alignment = 1

[node name="Parameters" type="VBoxContainer" parent="UI/ParameterPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 290.0
offset_bottom = 390.0
